fix: Updates dnd becmi roll templates to support dark mode
- Adds CSS rules to use the defined dark mode colours for the roll template row backgrounds and text
- Updates some existing CSS rules to use defined colours rather than similar hard-coded colours
- Adds CSS rules to ensure the inline roll results are coloured in a specific manner to ensure readability

--- a/D&D_BECM/BDnDSheet.css
+++ b/D&D_BECM/BDnDSheet.css
@@ -1,8 +1,9 @@
 
 .sheet-rolltemplate-5eDefault .sheet-rt-card {
-    width:95%;
-    background-color:#FFFFFF;
+	width:95%;
+	background-color: var(--color-surface1);
 	font-size: 11px;
+	color: var(--color-text);
 
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -15,6 +16,7 @@
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+
 /* Generic header */
 .sheet-rolltemplate-5eDefault .sheet-rt-header {
 	text-align: center;
@@ -27,6 +29,10 @@
 	-moz-box-shadow: 0 2px 0 rgba(0,0,0,.3);
 	-webkit-box-shadow: 0 2px 0 rgba(0,0,0,.3);
 	box-shadow: 0 2px 0 rgba(0,0,0,.3);
+	
+	border-radius: 5px 5px 0px 0px;
+	-moz-border-radius: 5px 5px 0px 0px;
+	-webkit-border-radius: 5px 5px 0px 0px;
 }
 
 .sheet-rolltemplate-5eDefault .sheet-rt-header:before,
@@ -125,10 +131,8 @@
 
 
 .sheet-rolltemplate-5eDefault .sheet-row:nth-child(even) {
-
-	background-color: #E9EDEE;
+	background-color: var(--color-surface2);
 }
-
 
 .sheet-rolltemplate-5eDefault .sheet-rt-key {
 	font-weight: bold;
@@ -200,6 +204,29 @@
 	padding: 0px 5px;
 	margin: 0px 5px 5px 5px;
 
+}
+
+.sheet-rolltemplate-5eDefault .sheet-rt-card .inlinerollresult {
+	background-color: var(--el-color-black);
+	border-color: var(--el-color-black);
+	color: var(--el-color-white);
+}
+
+.sheet-rolltemplate-5eDefault .sheet-rt-card .inlinerollresult.fullcrit {
+	border-color: var(--el-color-success);
+}
+
+.sheet-rolltemplate-5eDefault .sheet-rt-card .inlinerollresult.fullfail {
+	border-color: var(--el-color-danger);
+}
+
+.sheet-rolltemplate-5eDefault.sheet-rolltemplate-darkmode .sheet-rt-card {
+	background-color: var(--dark-surface1);
+	color: var(--dark-primarytext);
+}
+
+.sheet-rolltemplate-darkmode .sheet-rt-card .sheet-row:nth-child(even) {
+	background-color: var(--dark-surface2);
 }
 
 /*** ROLL TEMPLATE STYLING ENDS HERE **/
